--- a/css/auth.css
+++ b/css/auth.css
@@ -8,6 +8,7 @@
     margin-bottom: 10px;
 }
 .form-signin .checkbox {
+    padding-left: 20px;
     font-weight: normal;
 }
 .form-signin .form-control {
