Добавленна страница подтверждающая успешность регистрации, изменена страница авторизации. php скрипты приведенны хоть какое-то рабочее состояние

--- a/css/auth.css
+++ b/css/auth.css
@@ -1,17 +1,23 @@
-.form-signin {
+.main-authentication__img {
+    min-height: 450px;
+    background: url("../img/totoro.png") no-repeat;
+    background-size: 100% 450px;
+}
+
+.main-authentication__form-signin {
     max-width: 330px;
     padding: 15px;
-    margin: 0 auto;
+    padding-top: 50px;
 }
-.form-signin .form-signin-heading,
-.form-signin .checkbox {
+.main-authentication__form-signin .form-signin-heading,
+.main-authentication__form-signin .checkbox {
     margin-bottom: 10px;
 }
-.form-signin .checkbox {
+.main-authentication__form-signin .checkbox {
     padding-left: 20px;
     font-weight: normal;
 }
-.form-signin .form-control {
+.main-authentication__form-signin .form-control {
     position: relative;
     height: auto;
     -webkit-box-sizing: border-box;
@@ -20,16 +26,22 @@
     padding: 10px;
     font-size: 16px;
 }
-.form-signin .form-control:focus {
+.main-authentication__form-signin .form-control:focus {
     z-index: 2;
 }
-.form-signin input[type="email"] {
+.main-authentication__form-signin input[type="email"] {
     margin-bottom: -1px;
     border-bottom-right-radius: 0;
     border-bottom-left-radius: 0;
 }
-.form-signin input[type="password"] {
+.main-authentication__form-signin input[type="password"] {
     margin-bottom: 10px;
     border-top-left-radius: 0;
     border-top-right-radius: 0;
+}
+
+@media (max-width: 991px) {
+    .main-authentication__form-signin {
+        margin: 0 auto;
+    }
 }
