--- a/css/users.css
+++ b/css/users.css
@@ -2,18 +2,43 @@
     padding-left: 50px;
 }
 
+
 .users-block {
     min-height: 500px;
     margin-top: 20px;
     padding: 1px;
-    padding-top: 10px;
     border: 3px solid #5799e0;
-    border-left: 50px solid #5799e0;
-    border-radius: 8%;
+    border-radius: 0 0 8px 8px;
+}
+
+.users-block__header {
+    vertical-align: middle;
+}
+
+.users-block__btn {
+    margin-left: 20px;
+    margin-top: 20.5px;
+    margin-bottom: 20.5px;
 }
 
 .main-block__img {
     min-height: 600px;
     background: url("../img/flcl@fs.png") no-repeat;
     background-size: 100% 600px;
+}
+
+/* users-form */
+
+.form-users {
+    padding-top: 40px;
+}
+
+.form-users__item-list {
+    width: 80%;
+    margin: 0 auto;
+    margin-bottom: 50px;
+}
+
+.form-users__item:nth-child(2n+1) {
+    margin-left: 60px;
 }
